quarkus-mysql-connection/src/main/resources/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-mysql-connection
  annotations:
    #inginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-kubernetes.com.br
    http:
      paths:
      #- pathType: ImplementationSpecific
      #  path: /config-test(/|$)(.*)
      - pathType: Prefix
        path: /config-test
        backend:
          service:
            name: quarkus-mysql-connection
            port:
              number: 80
